# core

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVPLAN.md  DEV_PLAN.md  Dockerfile  Dockerfile.test  Dockerfile.test.dockerignore  LICENSE  README.md  core_agent_lines.sh  docker-compose.test.yml  docker-compose.yml  install.sh  kiso-host.sh  libicui18n.so.76  libicuuc.so.76  notes.md  pyproject.toml  registry.json  run_bash_tests.sh  run_full_tests.sh  run_tests.sh  summary.sh
cli/: __init__.py  _admin.py  _from_url_hint.py  _http.py  _registry.py  behavior.py  config_cmd.py  connector.py  cron.py  doctor.py  env.py  init.py  knowledge.py  mcp.py  plugin.py  plugin_ops.py  plugin_test_runner.py  preset.py  preset_ops.py  project.py  recipe.py  render.py  reset.py  role.py  roles.py  rules.py  session.py  skill.py  stats.py  tool.py  user.py  wrapper.py
completions/: kiso.bash  kiso.zsh
devplan/: plugins.md  presets.md  v0.1-completed.md  v0.10-wip.md  v0.10.md  v0.11-wip.md  v0.2-wip.md  v0.2.md  v0.3-wip.md  v0.3.md  v0.3_wip.md  v0.4.md  v0.4_wip.md  v0.5.md  v0.5_wip.md  v0.6.md  v0.6_wip.md  v0.7.md  v0.7_wip.md  v0.8-wip.md  v0.8.md  v0.9-audit.md  v0.9-wip.md
docs/: api.md  architecture.md  audit.md  behaviors.md  cli.md  config.md  connectors.md  database.md  default-preset.md  devplan-format.md  docker.md  extensibility.md  flow.md  hooks.md  https.md  index.md  llm-roles.md  logging.md  mcp.md  model-selection.md  recipes.md  recommended-mcps.md  recommended-skills.md  safety.md  security-risks.md  security.md  skill-development.md  skills.md  standards.md  testing-live.md  testing.md  tool-development.md  tools.md  tutorial.md  v0.10-migration.md  wrapper-development.md  wrappers.md
kiso/: _subprocess_utils.py  _version.py  audit.py  auth.py  brain.py  brain_prompting.py  cli.py  cli_connector.py  cli_env.py  cli_reset.py  cli_skill.py  config.py  config_checks.py  connector_config.py  connectors.py  hooks.py  knowledge_import.py  llm.py  log.py  main.py  mcp_presets.py  migrate_recipes.py  plugin_ops.py  plugins.py  presets.py  pub.py  recipe_loader.py  registry.py  render.py  security.py  session_export.py  skill_install.py  skill_loader.py  skill_repair.py  skill_runtime.py  skill_trust.py  skills.py  stats.py  store.py  sysenv.py  (+9 more)
tests/: README.md  _cli_plugin_helpers.py  _cli_test_helpers.py  _cli_user_helpers.py  _mcp_mock.py  conftest.py  test_admin.py  test_aider_injection.py  test_audit.py  test_auth.py  test_brain.py  test_briefer.py  test_briefer_mcp_pool.py  test_broker_generalist.py  test_cancel.py  test_chat_kb.py  test_classifier_prompt.py  test_clean_session_application.py  test_cli.py  test_cli_behavior.py  test_cli_config.py  test_cli_connector.py  test_cli_cron.py  test_cli_doctor.py  test_cli_env.py  test_cli_init.py  test_cli_integration.py  test_cli_knowledge.py  test_cli_mcp.py  test_cli_mcp_reset_health.py  test_cli_plugin.py  test_cli_project.py  test_cli_recipe.py  test_cli_render.py  test_cli_reset.py  test_cli_role.py  test_cli_roles.py  test_cli_rules.py  test_cli_session.py  test_cli_skill.py  (+156 more)
utils/: _load_env.sh  loc_count.sh  run_tests.sh  summary.sh  (+2 more)
(+180 files in other folders)
