[project]
name = "kiso"
version = "0.1.0"
description = "Minimal agent bot"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.21",
    "httpx>=0.28",
]

[project.scripts]
kiso = "kiso.cli:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.25", "httpx>=0.28", "pytest-cov>=6"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # pytest-asyncio: subprocess transport.__del__ fires after event loop closes.
    # Harmless GC ordering issue — not a real error in our code.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["kiso"]
omit = ["kiso/cli.py"]  # TODO: remove when CLI gets tests (M15)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
